# traingame-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/asset-meta/: Cargo.toml
crates/asset-meta/src/: design_index.rs  lib.rs  mini_asset.rs
crates/asset-meta/tests/: DesignV.bytes
crates/bytes-util/: Cargo.toml
crates/bytes-util/src/: from_bytes.rs  lib.rs  util.rs
crates/common/: Cargo.toml
crates/common/src/: downloader.rs  hash.rs  lib.rs  logging.rs
crates/parser/: Cargo.toml
crates/parser/src/: custom_parser.rs  lib.rs
crates/program/: Cargo.toml
crates/program/src/: cli.rs  main.rs
crates/program/src/actions/: excel.rs  mod.rs  textmap.rs
crates/program/src/actions/config/: adventure_ability.rs  adventure_modifier.rs  complex_skill_ai_global.rs  config_ability.rs  global_modifier.rs  global_task_template.rs  level_output.rs  mission.rs  mod.rs  rogue_chest_map.rs  rogue_npc.rs  skill_tree_point_preset.rs  summon_unit.rs  video_caption.rs
