[package]
name = "common"
edition = "2024"
version.workspace = true

[dependencies]
xxhash-rust.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true

tg-asset-meta.workspace = true
tg-bytes-util.workspace = true
